# Enlightenment

./: .gitignore  CMakeLists.txt  README.md  cleanup.sh
cmake_modules/: mcresourcepack.cmake  mcresourcepack_ctm.cmake
pack/: pack.mcmeta
pack/assets/minecraft/blockstates/: diamond_ore.json  gold_ore.json  redstone_ore.json  stone.json  stone_double_slab.json
pack/assets/minecraft/models/block/: coal_ore_mirrored.json  diamond_ore_mirrored.json  hopper_down.json  hopper_side.json  lapis_ore_mirrored.json
pack/assets/minecraft/models/item/: shield.json
src/: CMakeLists.txt  pack.mcmeta  particles.xcf  runes.xcf
src/blocks/: CMakeLists.txt  bricks.properties  bricks.xcf  bricks_nether.properties  bricks_nether_red.properties  coal_block.xcf  dirt.xcf  grass_side.xcf  hardened_clay.xcf  nether_bricks.xcf  obsidian.xcf
src/blocks/glass/: CMakeLists.txt  glass.xcf  glass_pane_top.xcf
src/blocks/glass/ctm/: glass.properties  glass_0.properties  glass_1.properties  glass_10.properties  glass_11.properties  glass_12.properties  glass_13.properties  glass_14.properties  glass_15.properties  glass_16.properties  glass_17.properties  glass_18.properties  glass_19.properties  glass_2.properties  glass_20.properties  glass_21.properties  glass_22.properties  glass_23.properties  glass_24.properties  glass_25.properties  glass_26.properties  glass_27.properties  glass_28.properties  glass_29.properties  glass_3.properties  glass_30.properties  glass_31.properties  glass_32.properties  glass_33.properties  glass_34.properties  glass_35.properties  glass_36.properties  glass_37.properties  glass_38.properties  glass_39.properties  glass_4.properties  glass_40.properties  glass_41.properties  glass_42.properties  glass_43.properties  (+8 more)
src/blocks/ores/: CMakeLists.txt  coal_ore.xcf  diamond_ore.xcf  emerald_ore.xcf  gold_block.xcf  gold_ore.xcf  iron_ore.xcf  lapis_ore.xcf  redstone_ore.xcf
src/blocks/ores/blockstates/: coal_ore.json  emerald_ore.json  iron_ore.json  lapis_ore.json
src/blocks/ores/models/: emerald_ore_mirrored.json  gold_ore_mirrored.json  iron_ore_mirrored.json  redstone_ore_mirrored.json
src/blocks/sand/: CMakeLists.txt  sand.xcf  sandstone_normal.xcf
src/blocks/stone/: CMakeLists.txt  stone.xcf  stone_slab.xcf  stone_slab_side.xcf  stonebrick.xcf  stonebrick_cracked.xcf  stonebrick_mossy.xcf
src/blocks/stone/models/: double_stone_top_mirrored.json
src/blocks/wood/: CMakeLists.txt  log_acacia.xcf  log_big_oak.xcf  log_birch.xcf  log_jungle.xcf  log_jungle_top.xcf  log_oak.xcf  log_oak_top.xcf  log_spruce.xcf  planks.xcf  planks_acacia.xcf  planks_big_oak.xcf  planks_birch.xcf  planks_jungle.xcf  planks_oak.xcf  planks_spruce.xcf
src/environment/: CMakeLists.txt  rain.xcf
src/equipment/: CMakeLists.txt  diamond_axe.xcf  diamond_pickaxe.xcf  diamond_sword.xcf  shield_blocking.json
src/gui/: CMakeLists.txt
src/gui/composed/: CMakeLists.txt  background.xcf  widgets.xcf
src/gui/title/: CMakeLists.txt
src/items/: CMakeLists.txt  apple.xcf  golden_apple.xcf  stick.xcf  torch.xcf
src/items/map/: CMakeLists.txt  map_background.xcf
src/redstone/: CMakeLists.txt  hopper_bottom.xcf  hopper_down.json  hopper_outside.xcf  lever.xcf  redstone_dust_cross.xcf  redstone_dust_line.xcf  redstone_torch.xcf  repeater.xcf
src/utilities/: CMakeLists.txt  chest_double.xcf  chest_normal.xcf  enchanting_table_book.xcf  enchanting_table_bottom.xcf  enchanting_table_side.xcf  enchanting_table_top.xcf
